# cpp-container

./: .bazeliskrc  .bazelrc  .dockerignore  Dockerfile  MODULE.bazel  README.md  docker-bake.hcl
.github/workflows/: bazel-runner-smoke.yml  publish-images.yml
docker/: entrypoint-dev.sh
docker/profile/: bazel_dev_aliases.sh  clang-env.sh  dev-aliases.sh  gcc-env.sh
docker/scripts/: common.sh  install-base-packages.sh  install-bazel-runner-packages.sh  install-bazelisk.sh  install-buf.sh  install-buildifier.sh  install-clang-toolchain.sh  install-clangd.sh  install-cmake.sh  install-debug-tools.sh  install-gcc-toolchain.sh  install-python-conan.sh  install-uv.sh  install-vcpkg.sh  setup-dev-user.sh  setup-llvm-apt.sh  setup-sshd.sh
examples/gtest-bazel/: BUILD.bazel  build-test.sh
examples/gtest-bazel/test/: sample_test.cpp
examples/gtest-cmake-conan/: CMakeLists.txt  build-test.sh  conanfile.txt
examples/gtest-cmake-conan/test/: sample_test.cpp
examples/sanitizers/: build-test.sh  sanitizer_probe.cpp
proto/demo/v1/: BUILD.bazel  person.proto
