load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@protobuf//bazel:proto_library.bzl", "proto_library")

proto_library(
    name = "person_proto",
    srcs = ["person.proto"],
    strip_import_prefix = "/proto",
    visibility = ["//visibility:public"],
)

cc_proto_library(
    name = "person_cc_proto",
    deps = [":person_proto"],
    visibility = ["//visibility:public"],
)
